fix: welcome section on small resolution

--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -134,6 +134,6 @@
 
   @media (max-width: 420px) {
     font-size: 20px;
-    margin-bottom: 15px;
+    margin-bottom: -10px;
   }
 }
